Table constraints and some experimental support for binary trees

--- a/tests/tests2.html
+++ b/tests/tests2.html
@@ -11,6 +11,7 @@
   <script src="qunit.js"></script>
   <script type="text/javascript" src="../jquery.min.js"></script>
   <script type="text/javascript" src="../jsdb-2.js"></script>
+  <script src="BinaryTree.js"></script>
   <script src="unit-tests-2.js"></script>
   <script src="Columns.js"></script>
   <script src="TableRow.js"></script>
