New walker method 'is' and some unit tests for it

--- a/tests/tests2.html
+++ b/tests/tests2.html
@@ -13,6 +13,7 @@
   <script type="text/javascript" src="../jsdb-2.js"></script>
   <script src="BinaryTree.js"></script>
   <script src="unit-tests-2.js"></script>
+  <script src="Walker.js"></script>
   <script src="Columns.js"></script>
   <script src="TableRow.js"></script>
 </body>
