Show the number of rows before the result tables

--- a/console.html
+++ b/console.html
@@ -225,7 +225,7 @@
 					//}
 				});
 				html.push('</tbody></table>');
-				return html.join("");
+				return '<p>' + data.rows.length + " rows:</p>" + html.join("");
 			}
 			
             loadState();
