Small visual and speed improvement for the generated tables

--- a/console.html
+++ b/console.html
@@ -138,8 +138,9 @@
             
             table {
             	border : 1px solid #666;
-            	border-collapse:collapse;
+            	border-spacing:0;
             	margin: 1ex 0 1em;
+                table-layout: fixed;
             }
             td, th {
             	border-bottom: 1px solid #666;
