New tests for SQL queries

--- a/tests/tests2.html
+++ b/tests/tests2.html
@@ -16,5 +16,6 @@
   <script src="Walker.js"></script>
   <script src="Columns.js"></script>
   <script src="TableRow.js"></script>
+  <script src="select.js"></script>
 </body>
 </html>
