--- a/tests/tests2.html
+++ b/tests/tests2.html
@@ -8,6 +8,9 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
+  <script type="text/javascript">
+  var JSDB_EXPORT_FOR_TESTING = true;
+  </script>
   <script src="qunit.js"></script>
   <script type="text/javascript" src="../jquery.min.js"></script>
   <script type="text/javascript" src="../jsdb-2.js"></script>
