Clean-up and re-organize the project structure

--- a/console/console.html
+++ b/console/console.html
@@ -183,7 +183,7 @@
         <pre id="out"></pre>
         <textarea rows="1" id="in" spellcheck="false" placeholder="Type SQL commads here. Hit Ctrl/Command+Enter to execute."></textarea>
         <script type="text/javascript" src="jquery.min.js"></script>
-        <script type="text/javascript" src="jsdb-2.js"></script>
+        <script type="text/javascript" src="../jsdb-2.js"></script>
         <script type="text/javascript">
         
         jQuery(function($) {
