Latest changes and comments

--- a/console/console.html
+++ b/console/console.html
@@ -345,7 +345,7 @@
                     result.type === JSDB.Result.TYPE_SET) 
                 {
                     $out.append(result.toHTML());
-                    $out.append('<br><br>');
+                    /*$out.append('<br><br>');
                     $out.append(result.toJSONString(4));
                     $out.append('<br><br>');
                     $out.append(result.toCSV());
@@ -356,7 +356,7 @@
                             .replace(/</g, "&lt;")
                             .replace(/>/g, "&gt;")
                             .replace(/"/g, "&quot;")
-                    );
+                    );*/
                 }
 
                 $out.append('<br>');
