Unit tests for transactions

--- a/tests/tests2.html
+++ b/tests/tests2.html
@@ -20,6 +20,7 @@
   <script src="Columns.js"></script>
   <script src="TableRow.js"></script>
   <script src="test.expressions.js"></script>
+  <script src="transaction_api.js"></script>
 
   <script src="statements/test.CREATE_DATABASE.js"></script>
   <script src="statements/test.USE.js"></script>
