New unit tests for the CREATE TABLE queries

--- a/site/www/tests/tests2.html
+++ b/site/www/tests/tests2.html
@@ -23,6 +23,7 @@
   <script src="transaction_api.js"></script>
 
   <script src="statements/test.CREATE_DATABASE.js"></script>
+  <script src="statements/test.CREATE_TABLE.js"></script>
   <script src="statements/test.USE.js"></script>
   <script src="statements/test.UPDATE.js"></script>
   <script src="select.js"></script>
