--- a/site/www/tests/tests2.html
+++ b/site/www/tests/tests2.html
@@ -14,7 +14,7 @@
   <script src="qunit.js"></script>
   <script type="text/javascript" src="/js/jquery.min.js"></script>
   <script type="text/javascript" src="/js/jssql.js"></script>
-  <script src="BinaryTree.js"></script>
+  <!--script src="BinaryTree.js"></script-->
   <script src="unit-tests-2.js"></script>
   <script src="Walker.js"></script>
   <script src="Columns.js"></script>
