Switch to local google-code-prettify scripts and styles

--- a/site/www/console/console.html
+++ b/site/www/console/console.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>JSDB CONSOLE</title>
+        <link href="/google-code-prettify/sunburst.css" type="text/css" rel="stylesheet" />
         <link rel="stylesheet" type="text/css" href="console.css"/>
     </head>
     <body>
@@ -10,8 +11,9 @@
         <textarea rows="1" id="in" spellcheck="false" placeholder="Type SQL commads here. Hit Ctrl/Command+Enter to execute."></textarea>
         <script type="text/javascript" src="/js/jquery.min.js"></script>
         <script type="text/javascript">var JSDB_EXPORT_FOR_TESTING = true;</script>
+        <!--script type="text/javascript" src="http://Vladimirs-MacBook-Pro.local:3001/socket.io/socket.io.js"></script-->
         <script type="text/javascript" src="/js/jssql.js"></script>
-        <script type="text/javascript" src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js?lang=sql&amp;autoload=true&amp;skin=sunburst" defer="defer"></script>
-        <script type="text/javascript" src="console.js"></script>        
+        <script type="text/javascript" src="/google-code-prettify/prettify.js?lang=sql&amp;autoload=true&amp;skin=sunburst" defer="defer"></script>
+        <script type="text/javascript" src="console.js"></script>    
     </body>
 </html>
